[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/menu.gd" type="Script" id=1]
[ext_resource path="res://objects/fondo.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/themes/menu/menu_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/themes/menu/menu_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/themes/menu/button_focus.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/themes/menu/button_disabled.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/themes/menu/button_normal.tres" type="StyleBox" id=8]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="fondo" parent="." instance=ExtResource( 2 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.440125
margin_right = -0.440125
custom_constants/margin_right = 350
custom_constants/margin_top = 80
custom_constants/margin_left = 350
custom_constants/margin_bottom = 80

[node name="botonera" type="VBoxContainer" parent="MarginContainer"]
margin_left = 350.0
margin_top = 80.0
margin_right = 674.0
margin_bottom = 520.0
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1

[node name="aventura" type="Button" parent="MarginContainer/botonera"]
margin_top = 124.0
margin_right = 324.0
margin_bottom = 153.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Modo Aventura (En Construccion)"

[node name="super" type="Button" parent="MarginContainer/botonera"]
margin_top = 178.0
margin_right = 324.0
margin_bottom = 207.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Modo Supervivencia"

[node name="como" type="Button" parent="MarginContainer/botonera"]
margin_top = 232.0
margin_right = 324.0
margin_bottom = 261.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Como Jugar"

[node name="salir" type="Button" parent="MarginContainer/botonera"]
margin_top = 286.0
margin_right = 324.0
margin_bottom = 315.0
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Salir"

[node name="como_popup" type="Popup" parent="MarginContainer"]
margin_left = 350.0
margin_top = 80.0
margin_right = 674.0
margin_bottom = 520.0

[node name="fondo" type="ColorRect" parent="MarginContainer/como_popup"]
margin_left = -406.0
margin_top = -103.0
margin_right = 743.0
margin_bottom = 550.0
rect_clip_content = true
color = Color( 0.141176, 0.141176, 0.141176, 0.52549 )

[node name="relleno" type="ColorRect" parent="MarginContainer/como_popup"]
margin_left = -19.0
margin_top = -17.0
margin_right = 350.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0313726, 0.313726, 0.109804, 1 )

[node name="como_jugar" type="Label" parent="MarginContainer/como_popup"]
margin_right = 288.0
margin_bottom = 82.0
text = "Si tocas un insecto te quitará una vida, cuando te quedas sin vidas finaliza el juego.
Para desplazarte puedes usar las teclas WASD ó los cursores. 
Pulsa [Escape] para pausar el juego."
autowrap = true

[node name="hide" type="Button" parent="MarginContainer/como_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 198.0
margin_top = 102.0
margin_bottom = -313.0
hint_tooltip = "Cerrar la ventana"
theme = ExtResource( 3 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Cerrar"

[node name="Creditos" type="Label" parent="."]
margin_left = 635.057
margin_top = 564.928
margin_right = 1002.06
margin_bottom = 578.928
text = "Realizado por Nahuel Ourthe: http://github.com/redpanter"

[node name="version" type="Label" parent="."]
margin_left = 18.017
margin_top = 564.928
margin_right = 388.96
margin_bottom = 578.928

[connection signal="pressed" from="MarginContainer/botonera/aventura" to="." method="_on_aventura"]
[connection signal="pressed" from="MarginContainer/botonera/super" to="." method="on_super"]
[connection signal="pressed" from="MarginContainer/botonera/como" to="." method="_on_como"]
[connection signal="pressed" from="MarginContainer/botonera/salir" to="." method="on_salir"]
[connection signal="pressed" from="MarginContainer/como_popup/hide" to="." method="_on_como_hide"]
